updated at: 2023-04-25 19:11, みかん - 乳性炭酸VR - BOOTH

--- a/VRChat/11/1061811.html
+++ b/VRChat/11/1061811.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "dtOg08wcbBZlB+hL5mmAPhnHi1k8lyJbkfAFSGxm+S0="></script>
+    "Il07eWYRtjnWD5lVDTU7VLzwm42o0ZabWuhGquFA3ZE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"みかん","description":"見ての通りのみかんです。\nポリゴン数554。\n\n残念ながら皮をむいたりはできませんが\n見た目は目にやさしくみずみずしいみかんですので\nみかんが浮かぶ手品や\n積み重ねてこたつのお供などにどうぞ\n\n－－－－－ご注意－－－－－\n\nみかんですので思想的表現はできないとは思いますが、一応禁止いたします。\n\n改変は自由です、一部腐ってようとカビていようと早生だろうとみかんはみかんです。\n\n再配布はできるだけご遠慮ください。\n\n念のため著作権は製作者に帰属します。\n\nあとは常識の範囲で、おいしくいただいてください。\n\n\n不備や不具合、ご質問等ございましたらTwitter（ https://twitter.com/kamimk3 ）までどうぞ\n\n","url":"https://booth.pm/ja/items/1061811","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/23ccfef0-8531-4c36-9b34-431bf45abef2/i/1061811/ec2bca53-741b-4b02-b166-f6cda0204562_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="dtOg08wcbBZlB+hL5mmAPhnHi1k8lyJbkfAFSGxm+S0="></script>
+    nonce="Il07eWYRtjnWD5lVDTU7VLzwm42o0ZabWuhGquFA3ZE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1061811/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               104
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1061811/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               104
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
