updated at: 2023-04-25 19:11, 3Dモデル「魔剣エンドピース」 - ネタおじ商店 - BOOTH

--- a/VRChat/04/1061204.html
+++ b/VRChat/04/1061204.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "5WUSn+C17Ga10SD6F3AkoVgNCt+lejw+Qcz/zpqaYUo="></script>
+    "agjq04d71oLl5XeM4YDcUYIWqG9zh/JavO2vL2e4iYQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル「魔剣エンドピース」","description":"本作品はUnityでの利用を想定したunitypackage形式の3DCG刃物モデル、「魔剣エンドピース」です。\n細部の調整やテクスチャの変更、Unity以外での使用にも対応出来るようにunitypackage以外にfbx形式も同梱しております。\n\n本作品の使用上の問題や不満な点、改善の要望などフィードバックは\nTwitterID@darakeruZer0\nまで、随時承っております。","url":"https://booth.pm/ja/items/1061204","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/deba127e-8158-4166-adea-d6a482459dd1/i/1061204/17323abd-142e-43d3-bdae-548522d083e8_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5WUSn+C17Ga10SD6F3AkoVgNCt+lejw+Qcz/zpqaYUo="></script>
+    nonce="agjq04d71oLl5XeM4YDcUYIWqG9zh/JavO2vL2e4iYQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1061204/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               11
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1061204/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               11
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
