--- a/VRChat/16/1060916.html
+++ b/VRChat/16/1060916.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "G4tYNf7JjOBmT9tMcBB9y0uMoX3a27s9W1ADEP9FE/A="></script>
+    "1/8lJqyD6AVuC4CC3hcxZSMhnp4kVciqPSFd0ek3ubQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】オリジナルアバター　スノウ","description":"VRChat向け、オリジナルアバター「スノウ」\n\nVRChat向けに調整したスノウちゃんです!\n揺れ物、表情等設定済みなので、UnityPackageを読み込んですぐにアップロードできます!\n(揺れ物の実装には、各自でDynamicBoneをご用意いただく必要があります)\n\n重要\nこのアバターはニコニ立体にて配布しているものをVRChat向けに調整、設定したものです。Blenderファイルはニコニ立体にて無料でDLいただけます。\nhttps://3d.nicovideo.jp/works/td43672\n\n内容物\n・表情設定済みUnityPackageデータ\n　　モデルポリゴン数 19264\n・取り扱い説明書\n","url":"https://booth.pm/ja/items/1060916","offers":{"priceCurrency":"JPY","@type":"Offer","price":"750"},"image":"https://booth.pximg.net/c/620x620/96e607b6-d0b4-45be-93a9-04c0ca140e9c/i/1060916/f368cf65-0051-4ce8-b44b-03e0e1d657c3_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="G4tYNf7JjOBmT9tMcBB9y0uMoX3a27s9W1ADEP9FE/A="></script>
+    nonce="1/8lJqyD6AVuC4CC3hcxZSMhnp4kVciqPSFd0ek3ubQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1060916/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               75
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1060916/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               75
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
