--- a/VRChat/08/1060708.html
+++ b/VRChat/08/1060708.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "MvJ6+xo7IjJNEbwyQc1jDKtuNjleYHDnov52OYeUki8="></script>
+    "IgRL8cVnpNa4OCIVQ0+RuQlZ1W+BT6mjnrCzFsOpkaM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"雲上シェーダー【Unity／VRChatで使える】","description":"VRChat でも使える、床面を変形して雲上を再現するシェーダーです。","url":"https://booth.pm/ja/items/1060708","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/1923aa83-c3b9-459f-a239-94c25ca49fb5/i/1060708/364a354f-a823-4377-a65c-a2408c8195ff_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="MvJ6+xo7IjJNEbwyQc1jDKtuNjleYHDnov52OYeUki8="></script>
+    nonce="IgRL8cVnpNa4OCIVQ0+RuQlZ1W+BT6mjnrCzFsOpkaM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1060708/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               336
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1060708/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               336
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
