updated at: 2023-04-25 19:12, 波紋シェーダー【Unity／VRChatで使える】 - Xin Games - BOOTH

--- a/VRChat/08/1060608.html
+++ b/VRChat/08/1060608.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "oHgaircbWG4F1iIK8O9dfGHDd4mCNn9aSTRU5jD+uEM="></script>
+    "ylxZLvgnFOyEzk23peAoNOlk4xUVYOChnqyijKzRlDc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"波紋シェーダー【Unity／VRChatで使える】","description":"VRChat でも使える床面や壁面に波紋を発生させる Unity シェーダーです。\n\n2020/10/30\n・Transparent (透明) 版を追加しました。\n\n2019/04/05\n・Unlit 版を追加しました。\n・波紋の原点位置をインスペクターから編集できるようにパラメーターを追加しました。","url":"https://booth.pm/ja/items/1060608","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/1923aa83-c3b9-459f-a239-94c25ca49fb5/i/1060608/cc0da4a3-a829-48aa-97aa-a2d2d19a6fca_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="oHgaircbWG4F1iIK8O9dfGHDd4mCNn9aSTRU5jD+uEM="></script>
+    nonce="ylxZLvgnFOyEzk23peAoNOlk4xUVYOChnqyijKzRlDc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1060608/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               167
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1060608/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               167
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
