--- a/VRChat/96/1060196.html
+++ b/VRChat/96/1060196.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "YOdXoQrIta8Crqg56o0l6oWxM/YpSar/ihwGLaqowmw="></script>
+    "GvcbwGUa2KfpZ933Of0Nfq4hrZRxzYGhHOJ9WZelJXU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル「骨格標本ちゃん」","description":"VRChatでの使用を想定した3Dモデルです。\nアバターとして使ってもよし、パーツとしてもご利用いただけます。\nHumanoid対応、リップシンク設定済みです。\nVR・フルトラ動作確認済み\n△18.272\n\n◆内容物◆\nfbxファイル\nBlendファイル\nUnitypackageファイル\nテクスチャ","url":"https://booth.pm/ja/items/1060196","offers":{"priceCurrency":"JPY","@type":"Offer","price":"900"},"image":"https://booth.pximg.net/c/620x620/adaeb662-2e13-439e-acd0-f0d59980156c/i/1060196/dc168f5a-fc96-4ada-ab64-5520220ffce8_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YOdXoQrIta8Crqg56o0l6oWxM/YpSar/ihwGLaqowmw="></script>
+    nonce="GvcbwGUa2KfpZ933Of0Nfq4hrZRxzYGhHOJ9WZelJXU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1060196/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               68
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1060196/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               68
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
