--- a/VRChat/00/1060700.html
+++ b/VRChat/00/1060700.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "m0xUj7Gi99Py1lg9gDqi4K+oLDYaUO4xw+YaLB6awmg="></script>
+    "E1YLfASpNQsDz6ZX2SuhShnvt1lzXNxY9tI1QzWO0F4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"和弓・霏霏頽雪【VRChat対応】","description":"フルスクラッチの和弓「霏霏頽雪（ひひたいせつ）」です\n弦を引くことができるほか、射出可能なパーティクルを同封しています\n\nポリゴン数：512△\n\nVRChatでの使用を想定しています。\nまた、弦を引く挙動にDynamic Boneを使用しています。\nDynamic Boneなしでも動かすことができますが、弦を引くことはできません\n\n・10/23追記\nパーティクルの設定、及びDynamic Bone周りの設定についての解説動画を用意しました","url":"https://booth.pm/ja/items/1060700","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/b3455261-78a7-4395-ad3c-ee3028c2242e/i/1060700/cbbeeb72-2f6d-4911-ba87-245b0c654a76_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="m0xUj7Gi99Py1lg9gDqi4K+oLDYaUO4xw+YaLB6awmg="></script>
+    nonce="E1YLfASpNQsDz6ZX2SuhShnvt1lzXNxY9tI1QzWO0F4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1060700/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               164
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1060700/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               164
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
