--- a/VRChat/79/1060579.html
+++ b/VRChat/79/1060579.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "RjCy0uBhxrUo6kCwoc95x/64bejLeaca2MRGn6UQkvg="></script>
+    "1H7dtPvgCcEDiobI6xfFbBrHwrt/Lly3bNylwuIZfAs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"YMatShader2","description":"PBR用テクスチャに対応したUnity用MatCapシェーダです。\nUnityのStandardShaderで用いられる以下のテクスチャをそのまま流用できます。\n・Albedo Map\n・Normal Map\n・Metallic Map\n・Emission Map\n\nテクスチャ変数名もStandardに準拠した名称になっているため、シェーダを変更するだけで差し替えることが可能です。\nまたVRchatなどにおいて、Safetyで強制的にStandardになった際も、そのままテクスチャが引き継がれるため、彫像状態になることなく質感を保つことが出来ます。\n\n＊スクリーンショットのモデルは付属しません","url":"https://booth.pm/ja/items/1060579","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9e316222-2e53-4586-9471-58ac96f0baec/i/1060579/e832c334-5a95-4758-8ef9-9bb895392c42_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="RjCy0uBhxrUo6kCwoc95x/64bejLeaca2MRGn6UQkvg="></script>
+    nonce="1H7dtPvgCcEDiobI6xfFbBrHwrt/Lly3bNylwuIZfAs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1060579/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               265
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1060579/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               265
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
