--- a/VRChat/16/1060416.html
+++ b/VRChat/16/1060416.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "O02mdi7Z06yASSrwYvW23mGFrjypE1Gq3Zc9mu4NLes="></script>
+    "BLjQIw4ivXCK0eNG7tlKQAsUJwK/cI/aY7KNR/bZ1d4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"おでんの屋台","description":"マテリアル：1個\nテクスチャ：1枚\nポリゴン：4538\n\n\n自由に使ってください。\n","url":"https://booth.pm/ja/items/1060416","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/caf3bb4c-ffdb-4c61-b7f6-afae273c5993/i/1060416/7d669a81-7d4a-4823-b6c2-ef5388fcee30_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="O02mdi7Z06yASSrwYvW23mGFrjypE1Gq3Zc9mu4NLes="></script>
+    nonce="BLjQIw4ivXCK0eNG7tlKQAsUJwK/cI/aY7KNR/bZ1d4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1060416/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               81
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1060416/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               81
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
