--- a/VRChat/89/1059789.html
+++ b/VRChat/89/1059789.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "tt00RiQz9puq34wL521smqwsj/xI3Oi6GnUoKXgMS0I="></script>
+    "l5X+iZtex9RH/n44EEzC2WxOYInzmKXUSZeYJWaRpWc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"プレミアムわん子","description":"わんばんこー\n小咲南緒です\n今回は配布ではなく販売になります\nペロペロシェイプキーに加え、ぶちゅーシェイプキーを搭載\n更に、足に装備しているスコップを取り出すことができます\n\nVRCSDK\nCubed's Unity Shaders\nDynamicBone（有料）\nの3つのアセットを先にインポートしておくことをお勧めします\n\nリップシンク、目の追従＆瞬きは実装済みです\nうにちーパッケージをインポートしたら青い立方体のアイコン.prefabをヒエラルキー（画面左の枠）にドロップしてくださいね\n\n初期状態ではスカートはClothで動いています\nDynamicBoneの方がいいという方は、「外スカートCloth（Hipのボーン下にある）」と「内スカートウェイト」を非表示にして、「外スカート」「内スカート」を表示させてください。\n\n～～以下おやくそくです～～\n\n・グロテスクな表現はダメです\n・相手に恐怖を与える暴力的な表現も禁止です\n・守れない場合は小咲南緒からブロックされます\n・販売なので、再配布や再販売などが発覚した場合はおさわりまんに連絡します\n・エッチなのは公的な場では控えめにお願いします\n・このお約束は勝手に増えたり減ったりします\n・上記以外のことはまぁ、常識の範囲内でお願いします\n\n個人販売なので、不備や不具合が多いかと思いますが\nなにとぞご了承下さい\n連絡はTwitter＠KozakiNaoまで","url":"https://booth.pm/ja/items/1059789","offers":{"priceCurrency":"JPY","@type":"Offer","price":"700"},"image":"https://booth.pximg.net/c/620x620/d6a0764b-a914-4967-8f0d-496582bb28c4/i/1059789/a6d66761-a13f-4215-91ea-c647cabf6f78_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tt00RiQz9puq34wL521smqwsj/xI3Oi6GnUoKXgMS0I="></script>
+    nonce="l5X+iZtex9RH/n44EEzC2WxOYInzmKXUSZeYJWaRpWc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1059789/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               87
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1059789/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               87
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
