--- a/VRChat/22/1060022.html
+++ b/VRChat/22/1060022.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xW2oMmhCkCiyBoCPd5GbPumEhxfMqocjI//xqACU5zA="></script>
+    "He7k9jFo4z08kfnUncywfIFlUEQQlCUpeEa/wTVHQp4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ガンスピア","description":"ガンスピアです。 こちらの商品、テクスチャがないため、unityで着色してください。 △ポリゴン 1260(両手で△2520) -利用規約- 有償での再配布行為を禁止します。 当データの自作発言を禁止します。 -免責事項- このデータを使用して発生した、あらゆる問題、損害にも当方は責任を持ちません。 ご使用は自己責任でお願いします。","url":"https://booth.pm/ja/items/1060022","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/bbdf27ef-f591-4b8b-9bd3-e80fff42e933/i/1060022/00aa6bff-b5bd-42f0-9943-bc46c8084961_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xW2oMmhCkCiyBoCPd5GbPumEhxfMqocjI//xqACU5zA="></script>
+    nonce="He7k9jFo4z08kfnUncywfIFlUEQQlCUpeEa/wTVHQp4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1060022/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               65
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1060022/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               65
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
