--- a/VRChat/10/1059610.html
+++ b/VRChat/10/1059610.html
@@ -101,9 +101,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "pY5r2ASZrrxVAgsWcDZ6V0lobJjtZ87uVliNnb4YmJU="></script>
+    "6kczGRPbz5TzdRhmJiRD+wRtdffED7OylsMxCU7TbbQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Kurotori's DoF Filter v0.1 - VRChat用ボカシフィルター ","description":"VRChatでの使用を想定したDoFフィルターです！\nアバターなどに仕込み、このフィルター越しにスクリーンショットを撮ることで簡単にピンぼけした写真を撮ることができます！\n\nMITライセンスでシェーダーの改造、再配布も可能です。\n\n支援枠は通常DLのものと同じです。\n","url":"https://booth.pm/ja/items/1059610","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/fc6b0a4d-1d17-4d55-a0f6-963e574057a2/i/1059610/a5836cbb-47c7-4ebd-918e-93f23d5b258b_base_resized.jpg"}
     </script>
@@ -114,7 +114,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pY5r2ASZrrxVAgsWcDZ6V0lobJjtZ87uVliNnb4YmJU="></script>
+    nonce="6kczGRPbz5TzdRhmJiRD+wRtdffED7OylsMxCU7TbbQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -142,6 +142,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -186,7 +188,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1059610/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               241
@@ -201,14 +203,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1059610/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               241
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
