updated at: 2023-04-25 19:13, 初心者マーク-beginner mark- - solanine - BOOTH

--- a/VRChat/20/1059620.html
+++ b/VRChat/20/1059620.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "qMAMVARnQUVcA+f400OsqzmC1icLLSbi6ZaaJxpE1a8="></script>
+    "Vdmc4R8AmXn1CVUJdYvLGExd9zwotq0yBJPhD8enNXs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"初心者マーク-beginner mark-","description":"初心者マークです\n\nVRChat用を想定して　△20　で作っていますが、基本的になにに使っても問題ないモデルです\n\n出品者としても初心者なので、「おいおいこれが入ってないと使えないぞ」ってものがあればご連絡ください\n即対応いたします\n\n当モデルの利用により生じた一切の損害につき、その賠償義務をソラニンは負いません\n\n\n不明な点があればこちらまでご連絡ください\nツイッター\nhttps://twitter.com/solanine_nico","url":"https://booth.pm/ja/items/1059620","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/ad349ea1-c320-473c-933d-01a50c9c733f/i/1059620/5ae65f36-6772-4da1-b726-600671bcc4b2_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="qMAMVARnQUVcA+f400OsqzmC1icLLSbi6ZaaJxpE1a8="></script>
+    nonce="Vdmc4R8AmXn1CVUJdYvLGExd9zwotq0yBJPhD8enNXs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1059620/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               104
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1059620/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               104
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
