updated at: 2023-04-25 19:14, ほにゅうびん【VRチャット向け3Dモデル】 - しめさば水産 - BOOTH

--- a/VRChat/82/1058282.html
+++ b/VRChat/82/1058282.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "9oA7Y5Ly+wJv3rTHSulq6CEl48CPSdHV/M3oCf8bNGY="></script>
+    "rnzA2P/Q4rUJlwRjkZGGBGRbUDbGVJjH1hVWm0MpCws="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ほにゅうびん【VRチャット向け3Dモデル】","description":"※※Vケット２　モクリバザールAにて展示予定！！※※\n\n\n◆概要\n\n「あれ・・・？これが母性・・・？」\n\n※新しい目覚めに責任は持ちません\n\n制作：みこさく\n\n\n◆使い方\n\n手に持って相手の口に突っ込むもよし、自分で飲むもよし。\nアバターアニメーションやワールド設置でちゅっちゅしましょう。\n\n\n◆内容\n\n▽ほにゅびん.unitypackage\n└ほにゅうびん.fbx(△844)\n└ほにゅうびん.png\n└マテリアルなど\n※ファイル名は上記とは異なります。\n\n▽注意.txt\n\n\n◆利用・改変等に関して\n\n本モデルはVRChatでの使用を主な目的として制作しています。\n配信及び映像作品、その他プラットフォームでの利用も自由です。\nテクスチャの変更やモデルの改変等も可能です。\n詳しくは「README.txt」を参照し、それでもわからない場合は問い合わせしてください。\n\n\n◆著作権・制限事項・免責事項などの難しいところ\n\n本データの自作発言、他者への二次配布、パブリックワールド設置アバターへの使用を禁止します。\n本データの著作権は、しめさば水産に帰属します。\n本データを使用して発生した、いかなる損害・損失・その他不利益等には、当方は一切の責任を負いません。","url":"https://booth.pm/ja/items/1058282","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/35e9b140-14bb-4adb-90ad-592d067cee32/i/1058282/242c7b99-a6dc-464f-b76e-0672a0bd094c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9oA7Y5Ly+wJv3rTHSulq6CEl48CPSdHV/M3oCf8bNGY="></script>
+    nonce="rnzA2P/Q4rUJlwRjkZGGBGRbUDbGVJjH1hVWm0MpCws="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1058282/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               106
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1058282/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               106
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
