updated at: 2023-04-25 19:14, 【3Dモデル】動く城のフィオ抱きまくら.fbx - 動く城のフィオのお店 - BOOTH

--- a/VRChat/53/1058253.html
+++ b/VRChat/53/1058253.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "zWpv1CT/BcOu3YeyjGFUN1TbnayisUyicgqGVnQpd10="></script>
+    "vBihWdktFKrumb8AqLH5J9Pfn8LlG8IMjT+mP32mUys="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】動く城のフィオ抱きまくら.fbx","description":"株式会社エクスレア様×バーチャル忍道＜ニンジャロード＞プレゼンツ！\n動く城のフィオの抱きまくら(実物は非売品)の3Dモデルです。\nアバターやワールドに設置して、バーチャル睡眠などのお供に。\npickupやobjectsyncを適用済のunitypckage形式です。不要な場合はComponentを削除して下さい。\n\n商用利用可\n再配布不可","url":"https://booth.pm/ja/items/1058253","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/b8436563-0482-416d-9916-413cde8a8c6b/i/1058253/b8471ef4-a576-4c81-9ba8-06779b438c2f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zWpv1CT/BcOu3YeyjGFUN1TbnayisUyicgqGVnQpd10="></script>
+    nonce="vBihWdktFKrumb8AqLH5J9Pfn8LlG8IMjT+mP32mUys="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1058253/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               95
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1058253/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               95
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
