updated at: 2023-04-25 19:15, 【カラー６種類】なんかそれっぽい軍帽（リボン付き）　 - Re:GISTA - BOOTH

--- a/VRChat/67/1057167.html
+++ b/VRChat/67/1057167.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "QhOxsBPeE8TgWiEi8EDNit4zFW0gg+gBri6NmmB2oq4="></script>
+    "FiCYqjcv9B++6oDb6SyxeM8lIn/ZXbeuSBTIJtKdzjA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【カラー６種類】なんかそれっぽい軍帽（リボン付き）　","description":"【※こちらの商品はサポート・更新終了しております】\n\n比較的シンプルめな軍帽だよ！\n個人的な趣味でリボンついてる版も同梱！\n\nポリゴン数\nリボン有　　△1344\nリボン無　　△ 960\n\nまんまるシェーダー1.3を想定してます。\n","url":"https://booth.pm/ja/items/1057167","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/38d12e48-b117-4086-a5c7-b02cd8f9c952/i/1057167/d2b88f80-8b16-434e-9c3b-93cbb918bcb1_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="QhOxsBPeE8TgWiEi8EDNit4zFW0gg+gBri6NmmB2oq4="></script>
+    nonce="FiCYqjcv9B++6oDb6SyxeM8lIn/ZXbeuSBTIJtKdzjA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1057167/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               672
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1057167/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               672
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
