updated at: 2023-04-25 19:16, ぷるぷるプリン - じょにさんの配布物 - BOOTH

--- a/VRChat/01/1055101.html
+++ b/VRChat/01/1055101.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "YuYWIOu6WKGUJy+w5DZWTHYOW8/nIiXYQ/UK4UposKo="></script>
+    "rxikq8gg6XMero9omdqIYJn1w2jP4f296Etn6gF7HZk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ぷるぷるプリン","description":"ぷるぷるするプリンの3Dモデルです。\nVRChatのアバターの頭に髪飾りとして付けるために作成しました。\n改変、商用等、自由にご利用いただけます。\n\n2018/10/17\nお皿からMesh Colliderを削除","url":"https://booth.pm/ja/items/1055101","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/61e4610c-2d48-4d4b-b8e1-76e0985b5de8/i/1055101/631dc4c7-e5ab-4c4b-a1d2-5d8eb1bdeb4e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YuYWIOu6WKGUJy+w5DZWTHYOW8/nIiXYQ/UK4UposKo="></script>
+    nonce="rxikq8gg6XMero9omdqIYJn1w2jP4f296Etn6gF7HZk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1055101/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               202
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1055101/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               202
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
