updated at: 2023-04-25 19:17, 魔女帽子【VRChat向け】 - 白亜重工 - BOOTH

--- a/VRChat/92/1054992.html
+++ b/VRChat/92/1054992.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "rTJ391am5BsZycBOeKz0I0NvjXbG6O9RG6Qsnxnuan8="></script>
+    "qz4fXSK028Tw1FDoC4+3e3YPgH83ey/MEo8wkoszQOY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"魔女帽子【VRChat向け】","description":"ハロウィンのための魔女の帽子です\nサブスタもなく、自分のアバター用に作っていたのでポリゴンが多く色々雑です...\nサンプル画像のほうはいろいろ改造してしまってます\n\nー製品内容ー\nFBXデータ(ポリゴン数686)\nテクスチャデータ(png)\n\n帽子の先のほうにボーンが入っているのでダイナミックボーン等で揺らすことができます\n以下規約に従った上で、ご自由にお使いください！\n改変、商用利用は可です！\n\nー利用規約ー\n当データの著作権は製作者である白亜重工(白雪)に帰属します\n●禁止事項\n当データ(改変した場合も含む)の再配布、転載\n●免責事項\n当データを使用して発生したトラブルに一切の責任を製作者は負いません\nご利用は自己責任でお願いします","url":"https://booth.pm/ja/items/1054992","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/41af4b60-c647-4ace-80c0-e2874277d5ec/i/1054992/5833f52a-5e01-4803-a61f-909f6245ed67_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rTJ391am5BsZycBOeKz0I0NvjXbG6O9RG6Qsnxnuan8="></script>
+    nonce="qz4fXSK028Tw1FDoC4+3e3YPgH83ey/MEo8wkoszQOY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1054992/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               159
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1054992/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               159
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
