updated at: 2023-04-25 19:17, 仕込み和傘「紅葉」 - シンヤの模造武具 - BOOTH

--- a/VRChat/93/1054593.html
+++ b/VRChat/93/1054593.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "BQmj7A3fn8P/rJnyiaHqUGlagZ1bABj+Xmdl8b8brOg="></script>
+    "L63j/EtOlSMCe8nMnTY1YF984p1evlhalzhMM8PLsE0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"仕込み和傘「紅葉」","description":"秋に似合う和傘です。\n\n△ポリ644のローポリに加えて、仕込み杖となっています。\n傘の開閉シェイプキーも含まれていますので、様々な用途で楽しめます！","url":"https://booth.pm/ja/items/1054593","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/9b92b4aa-727e-4ad3-8a66-111e77c11365/i/1054593/2511a8be-4524-4fc1-a5f2-a6425a25062d_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="BQmj7A3fn8P/rJnyiaHqUGlagZ1bABj+Xmdl8b8brOg="></script>
+    nonce="L63j/EtOlSMCe8nMnTY1YF984p1evlhalzhMM8PLsE0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1054593/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               364
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1054593/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               364
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
